# CloudHaskell

./: .gitignore  CloudRef.cabal  README.md  helper.sh  letter.txt.save  out.txt  res.txt  stack.yaml  text.txt
article/: bibl.bib  main.tex  reqs.txt
src/: .#MapReduce.hs  Armstrong.hs  CompareMethods.hs  HelloCloud.hs  HelloNode.hs  LinksMonitors.hs  Main.hs  MergePorts.hs  Philosophers.hs
src/HaskellIntro/: Ex1.hs  Ex2.hs  Ex3.hs  Ex4.hs  Ex5.hs
src/KV/: Database.hs  DistribUtils.hs  Main.hs  Request.hs  Worker.hs
src/MapReduce/: .#MonoDistrMapReduce.hs  .#PolyDistrMapReduce.hs  CountFactors.hs  CountWords.hs  MapReduce.hs  MonoDistrMapReduce.hs  PolyDistrMapReduce.hs  SimpleLocalnet.hs
