name:                CloudRef
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zelinskiy/CloudRef#readme
license:             BSD3
license-file:        LICENSE
author:              zelinskiy
maintainer:          zelinskiy1917@gmail.com
copyright:           CC BY-NC-SA
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable CloudRef
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5                     

executable HelloCloud
  hs-source-dirs:      src
  main-is:             HelloCloud.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , distributed-process == 0.7.3
                     , network-transport == 0.4.4.0
                     -- , network-transport-tcp == 0.5.1
                     , network-transport-inmemory == 0.5.2