name:                CloudRef
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zelinskiy/CloudRef#readme
license:             BSD3
license-file:        LICENSE
author:              zelinskiy
maintainer:          zelinskiy1917@gmail.com
copyright:           CC BY-NC-SA
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Main
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -eventlog
                       -rtsopts
                       -fwarn-unused-imports
  build-depends:       base >= 4.7 && < 5
                     , distributed-process == 0.7.3
                     , network-transport == 0.5.2
                     , network-transport-tcp == 0.6.0
                     , network-transport-inmemory == 0.5.2
                     , deepseq
                     , stm
                     , QuickCheck

executable HelloCloud
  hs-source-dirs:      src
  main-is:             HelloCloud.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , distributed-process == 0.7.3
                     , network-transport == 0.5.2
                     , network-transport-inmemory == 0.5.2
                     

executable CompareMethods
  hs-source-dirs:      src
  main-is:             CompareMethods.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -eventlog
                       -rtsopts
  build-depends:       base >= 4.7 && < 5
                     , distributed-process == 0.7.3
                     , network-transport == 0.5.2
                     , network-transport-tcp == 0.6.0
                     , network-transport-inmemory == 0.5.2
                     , deepseq == 1.4.2.0
                     , stm == 2.4.4.1

executable Armstrong
  hs-source-dirs:      src
  main-is:             Armstrong.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , distributed-process == 0.7.3                     
                     , distributed-process-simplelocalnet == 0.2.4
                     , network-transport == 0.5.2
                     , deepseq == 1.4.2.0
                     , binary == 0.8.3.0
                     
executable MapReduce
  hs-source-dirs:      src
  main-is:             MapReduce/SimpleLocalnet.hs
  other-modules:       MapReduce.CountWords
                       MapReduce.MapReduce
                       MapReduce.MonoDistrMapReduce
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -eventlog
                       -rtsopts
                       -with-rtsopts=-K64M
  default-extensions:  BangPatterns
                       CPP
                       KindSignatures
                       ScopedTypeVariables
                       TemplateHaskell                    
  build-depends:       base >= 4.7 && < 5
                     , distributed-process == 0.7.3
                     , network-transport == 0.5.2
                     , network-transport-tcp == 0.6.0
                     , network-transport-inmemory == 0.5.2
                     , containers == 0.5.7.1
                     , random == 1.1
                     , distributed-process-simplelocalnet == 0.2.4
                     , array == 0.5.1.1
                     , distributed-static == 0.3.8
                     , bytestring == 0.10.8.1
                     , binary == 0.8.3.0
                     